[metadata]
name = diapretty
description = diapretty - LocalStack diagnosis pretty printer
url = https://github.com/silv-io/diapretty
version = 0.1.0
author = Silvio Vasiljevic
author_email = silvio.vasiljevic@localstack.cloud

[options]
packages = diapretty
install_requires =
    jinja2
    click
    pygments
    jinja2-highlight

[options.entry_points]
console_scripts =
    diapretty = diapretty.main:main
