[metadata]
name = diapretty
description = diapretty - LocalStack diagnosis pretty printer
url = https://github.com/silv-io/diapretty
version = 0.1.1
author = Silvio Vasiljevic
author_email = silvio.vasiljevic@localstack.cloud

[options]
packages = find:
scripts = bin/diapretty
install_requires =
    jinja2
    click

[options.extras_require]
dev =
    black>=22.1
    isort>=5.10

[options.entry_points]
console_scripts =
    diapretty = diapretty.main:main
